--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,14 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.7.0/introjs.min.css">
 </head>
 
 <body>
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRJlCwAahLxcnY8Plxb5dnxVf6RlM0s2o&libraries=visualization,places" async defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.7.0/intro.min.js"></script>
 </body>
 
 </html>
